- com.hutamakarya.bookseat - versionCode 2 - versionName "1.0.2"

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -3,7 +3,7 @@
     <div style="padding: 50px 30px 0px 30px;">
       <ion-text style="font-size: 30px; font-weight: 700;">Book Your Seat</ion-text>
     </div>
-    <img class="ion-margin" style="border-radius: 10px;" src="../../../assets/images/img-2.png">
+    <img class="ion-margin" style="border-radius: 10px;" src="../../../assets/images/img-3.jpeg">
     <div class="scrollYnew ion-padding">
       <div *ngFor="let x of seatDataList">
         <ion-accordion-group mode="md" expand="inset">
