--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -23,8 +23,8 @@
       </ion-list>
       <ion-list [inset]="true" mode="ios">
         <ion-item lines="none">
-          <ion-input type="password" placeholder="Password" [(ngModel)]="password" required>
-          </ion-input>
+          <ion-input [type]="passwordType" placeholder="Password" [(ngModel)]="password" required></ion-input>
+          <ion-icon name="{{iconName}}" item-end (click)="togglePass()"></ion-icon>
         </ion-item>
       </ion-list>
 
