--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -24,7 +24,7 @@
       <ion-list [inset]="true" mode="ios">
         <ion-item lines="none">
           <ion-input [type]="passwordType" placeholder="Password" [(ngModel)]="password" required></ion-input>
-          <ion-icon name="{{iconName}}" item-end (click)="togglePass()"></ion-icon>
+          <ion-icon slot="end" name="{{iconName}}" item-end (click)="togglePass()"></ion-icon>
         </ion-item>
       </ion-list>
 
